--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <footer>
     <p class="attribution mt-5">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/Renato-Lima-Neves/Base-Apparel-coming-soon-page.git">Renato Lima Neves</a>.
+      Coded by <a href="https://github.com/Renato-Lima-Neves/Base-Apparel-coming-soon-page/tree/master">Renato Lima Neves</a>.
     </p>
   </footer>
   <script src='index.js'></script>
